<resources>
    <string name="app_name">H-Bank</string>
    <string name="login_lbl">Login</string>
    <string name="name_hint">Name…</string>
    <string name="password_hint">Password…</string>
    <string name="login_btn">Login</string>
    <string name="login_register_separator">--or--</string>
    <string name="register_btn">Register</string>
    <string name="register_lbl">Register</string>
    <string name="repeat_password_hint">Repeat password…</string>
    <string name="is_parent_switch">Parent</string>
    <string name="password_length_error_part_2">characters long!</string>
    <string name="password_length_error_part_1">The password must be at least</string>
    <string name="name_too_short">The name is too short!</string>
    <string name="passwords_dont_match">The passwords don\'t match!</string>
    <string name="empty_fields">Please fill out all fields!</string>
    <string name="wrong_credentials">Wrong password or username!</string>
    <string name="user_already_exists">This user does already exist!</string>
    <string name="loading">Loading…</string>
    <string name="title_activity_main">Home</string>
    <string name="balance">Balance:</string>
    <string name="logout">You were signed out!</string>
    <string name="currency">$</string>
    <string name="wait">One moment please…</string>
    <string name="error_file_does_not_exist">Error: File does not exist!</string>
    <string name="title_activity_register">H-Bank</string>
    <string name="title_activity_login">H-Bank</string>
    <string name="title_fragment_home">Home</string>
    <string name="title_fragment_user_list">User List</string>
    <string name="title_fragment_log">Log</string>
    <string name="transfer_money">Transfer Money</string>
    <string name="payment_plans">Payment Plans</string>
    <string name="title_activity_transfer_money">Transfer Money</string>
    <string name="transfer_money_btn">Transfer</string>
    <string name="amount_hint">Amount…</string>
    <string name="description_hint">Description…</string>
    <string name="empty_amount_field">Please pick an amount!</string>
    <string name="amount_not_a_number">Amount is not a valid number!</string>
    <string name="transaction_complete">Transaction complete!</string>
    <string name="not_enough_money">You do not have enough money!</string>
    <string name="biometric_description">This app uses biometric authentication to protect your data.</string>
    <string name="authentication_required">Authentication required.</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_payment_plan">Payment Plans</string>
    <string name="title_activity_create_payment_plan">Payment Plan</string>
    <string name="schedule_hint">Schedule…</string>
    <string name="days">days</string>
    <string name="create">Create</string>
    <string name="schedule_not_a_number">Schedule is not a valid number!</string>
    <string name="create_success">Successfully created!</string>
    <string name="delete">Delete</string>
    <string name="sure">Are you sure?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="amount_lbl">Amount:</string>
    <string name="schedule_lbl">Schedule:</string>
    <string name="next_lbl">Next:</string>
    <string name="time_lbl">Time:</string>
    <string name="new_balance_lbl">New Balance:</string>
    <string name="sender_lbl">Sender:</string>
    <string name="receiver_lbl">Receiver:</string>
    <string name="update_available">There is an update available!</string>
    <string name="update_question">Do you want to update now?</string>
    <string name="update">Update</string>
    <string name="downloading">Downloading…</string>
    <string name="no_money">No Money</string>
    <string name="title_activity_my_payment_plans">My Payment Plans</string>
    <string name="no_other_users">There are no other users.</string>
    <string name="empty_log">The log is empty.</string>
    <string name="no_payment_plans">No payment plans available.</string>
    <string name="receiver_hint">Receiver…</string>
    <string name="user_does_not_exist">The user doesn\'t exist!</string>
    <string name="sender_cannot_be_the_receiver">The sender and the receiver are equal!</string>
    <string name="settings">Settings</string>
    <string name="info">Info</string>
    <string name="logout_btn">Sign Out</string>
    <string name="update_btn">Update</string>
    <string name="up_to_date">The app is up to date!</string>
    <string name="ok">OK</string>
    <string name="offline_login">Offline sign in</string>
    <string name="fingerprint_login">Sign in with fingerprint</string>
    <string name="auto_login">Auto sign in</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_info">All of your data will be gone! Please enter your password to confirm.</string>
    <string name="wrong_password">Wrong password!</string>
    <string name="confirm">Confirm</string>
    <string name="developer" translatable="false">Julian Hofmann</string>
    <string name="connected">connected</string>
    <string name="not_connected">not connected</string>
    <string name="active">active</string>
    <string name="inactive">inactive</string>
    <string name="dash" translatable="false">-</string>
    <string name="developer_lbl">Developer:</string>
    <string name="version_lbl">Version:</string>
    <string name="app_lbl">App</string>
    <string name="server_lbl">Server</string>
    <string name="status_lbl">Status:</string>
    <string name="payment_plans_lbl">Payment Plans:</string>
    <string name="backups_lbl">Backups:</string>
    <string name="cpu_lbl">CPU:</string>
    <string name="ram_lbl">RAM:</string>
    <string name="disk_lbl">Disk:</string>
    <string name="temperature_lbl">Temperature:</string>
    <string name="error">error</string>
    <string name="weeks">weeks</string>
    <string name="months">months</string>
    <string name="years">years</string>

    <string-array name="schedule_units">
        <item>days</item>
        <item>weeks</item>
        <item>months</item>
        <item>years</item>
    </string-array>

    <string-array name="protocols">
        <item>http</item>
        <item>https</item>
    </string-array>


    <string name="date_lbl">Date:</string>
    <string name="day">day</string>
    <string name="week">week</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="connecting">connecting…</string>
    <string name="title_activity_connection_settings">Connection Settings</string>
    <string name="connection">Connection</string>
    <string name="apply">Apply</string>
    <string name="ip_address_hint">IP Address…</string>
    <string name="port_hint">Port…</string>
    <string name="changes_saved">Saved changes!</string>
    <string name="cannot_reach_server">Cannot reach server!</string>
    <string name="connection_established">Connection established!</string>
    <string name="ip_address_lbl">IP-Address:</string>
    <string name="port_lbl">Port:</string>
    <string name="payment_plan">Payment Plan</string>
    <string name="connect">connect</string>
    <string name="protocol">Protocol:</string>
    <string name="wrong_protocol">Wrong protocol!</string>
    <string name="title_activity_calculator">Calculator</string>
    <string name="calculate">calculate</string>
    <string name="money_hint">Money…</string>
    <string name="time_hint">Time…</string>
    <string name="date_hint">Date…</string>
    <string name="dont_ask">Don\'t ask</string>
    <string name="parent_password_hint">Parent password…</string>
    <string name="wrong_parent_password">Wrong parent password!</string>
    <string name="auto_refresh">Auto refresh</string>
    <string name="auto_refresh_interval">Refresh interval</string>
    <string name="ms">ms</string>
    <string name="change_auto_refresh_interval">Change Refresh Interval</string>
    <string name="cash_lbl">Cash:</string>
    <string name="last_edit_lbl">Last edit:</string>
    <string name="cash_note_function">Cash note function</string>
</resources>