<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="300dp"
        android:layout_height="129dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_error_text">

        <EditText
            android:id="@+id/login_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="username"
            android:backgroundTint="@color/edit_text"
            android:ems="10"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:backgroundTint="@color/edit_text"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_username" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:onClick="login"
        android:text="@string/login_btn"
        app:layout_constraintBottom_toTopOf="@+id/login_or_lbl"
        app:layout_constraintEnd_toEndOf="@+id/switch_to_register_btn"
        app:layout_constraintStart_toStartOf="@+id/switch_to_register_btn" />

    <Button
        android:id="@+id/switch_to_register_btn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="50dp"
        android:onClick="switchToRegisterActivity"
        android:text="@string/register_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_lbl"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginTop="76dp"
        android:text="@string/login_lbl"
        android:textAlignment="center"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_or_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/login_register_separator"
        app:layout_constraintBottom_toTopOf="@+id/switch_to_register_btn"
        app:layout_constraintEnd_toEndOf="@+id/switch_to_register_btn"
        app:layout_constraintStart_toStartOf="@+id/switch_to_register_btn" />

    <TextView
        android:id="@+id/login_error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/login_lbl"
        app:layout_constraintStart_toStartOf="@+id/login_lbl"
        app:layout_constraintTop_toBottomOf="@+id/login_lbl" />

</androidx.constraintlayout.widget.ConstraintLayout>