<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tools.CalculatorActivity">

    <TextView
        android:id="@+id/calculate_lbl"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="5dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/title_activity_calculator"
        android:textAlignment="center"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate_lbl"
        app:layout_constraintVertical_bias="0.32">

        <EditText
            android:id="@+id/calculate_money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="amount"
            android:backgroundTint="@color/edit_text"
            android:ems="10"
            android:hint="@string/money_hint"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculate_time" />

        <EditText
            android:id="@+id/calculate_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="amount"
            android:backgroundTint="@color/edit_text"
            android:ems="10"
            android:hint="@string/time_hint"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calculate_date" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/currency"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/calculate_money"
            app:layout_constraintEnd_toEndOf="@+id/calculate_money"
            app:layout_constraintTop_toTopOf="@+id/calculate_money" />

        <Spinner
            android:id="@+id/calculate_time_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="@+id/calculate_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/calculate_time" />

        <EditText
            android:id="@+id/calculate_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/cancel_icon"
            android:drawableTint="@color/cancel"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/date_hint"
            android:importantForAutofill="no"
            android:inputType="date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/calculate_btn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="50dp"
        android:onClick="calculate"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>